--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,94 @@
 	margin: 0;
 	padding: 0;
 }
+
+body {
+    font-size: 16px;
+    font-family: 'Be Vietnam', sans-serif;
+    min-height: 100vh;
+}
+
+a {
+    text-decoration: none;
+}
+
+header {
+    padding: 53px 205px 0;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+}
+header .bg-right {
+    position: absolute;
+    left: 811px;
+    top: -119px;
+    z-index: -1;
+}
+header ul {
+    display: inherit;
+    padding-top: 4px;
+    gap: 34px;
+}
+header ul li a {
+    color: hsl(228, 39%, 23%);
+    font-size: 13px;
+}
+header .get-started {
+    padding: 3px 20px 0 0;
+}
+.get-started a {
+    color: #fff;
+    display: block;
+    padding: 15px 33px 16px 33px;
+    border-radius: 29px;
+    font-size: 13px;
+}
+header .bg-right svg {
+    width: 801px;
+    height: 895px;
+}
+header .bg-right svg rect {
+    width: 435.431px;
+    height: 861px;
+}
+header .logo {
+    padding: 17px 0 0 20px;
+}
+header .flex {
+    display: flex;
+    justify-content: center;
+    gap: 65px;
+    padding-top: 110px;
+}
+header .flex .wrapper {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+header .flex .wrapper h1 {
+    font-size: 54px;
+    font-weight: 900;
+    padding: 59px 20px 32px;
+    line-height: 1.19;
+}
+header .flex .wrapper .desc {
+    padding: 0 20px 0;
+    line-height: 1.7;
+    color: #a1a2a4;
+}
+.wrapper .get-started {
+    width: 178px;
+    padding: 39px 20px;
+}
+
+@media screen and (max-width:1440px) {
+    header {
+        padding: 53px 145px 0;
+    }
+    header .bg-right {
+        left: 751px;
+    }
+}
