--- a/css/style.css
+++ b/css/style.css
@@ -1,98 +1,183 @@
-@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam:wght@400;500;700&display=swap');
-*,*::before,*::after {
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam:wght@400;500;700&display=swap");
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-size: 16px;
-    font-family: 'Be Vietnam', sans-serif;
-    min-height: 100vh;
+  font-size: 16px;
+  font-family: "Be Vietnam", sans-serif;
+  min-height: 100vh;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
 }
 
 header {
-    padding: 53px 205px 0;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    align-items: center;
-    position: relative;
-    overflow: hidden;
+  position: relative;
+  overflow: hidden;
+}
+header .head-top {
+  padding: 53px 0 0;
+  max-width: 1151px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  overflow: hidden;
+  margin: 0 auto;
 }
 header .bg-right {
-    position: absolute;
-    left: 811px;
-    top: -119px;
-    z-index: -1;
+  position: absolute;
+  left: 811px;
+  top: -119px;
+  z-index: -1;
 }
-header ul {
-    display: inherit;
-    padding-top: 4px;
-    gap: 34px;
+.head-top ul {
+  display: inline-flex;
+  padding-top: 4px;
+  gap: 34px;
 }
-header ul li a {
-    color: hsl(228, 39%, 23%);
-    font-size: 13px;
+.head-top ul li a {
+  color: hsl(228, 39%, 23%);
+  font-size: 13px;
 }
-header .get-started {
-    padding: 3px 20px 0 0;
+.head-top .get-started {
+  padding: 3px 20px 0 0;
 }
 .get-started a {
-    color: #fff;
-    display: block;
-    padding: 15px 33px 16px 33px;
-    border-radius: 29px;
-    font-size: 13px;
+  color: #fff;
+  display: block;
+  padding: 15px 33px 16px 33px;
+  border-radius: 29px;
+  font-size: 13px;
 }
 header .bg-right svg {
-    width: 801px;
-    height: 895px;
+  width: 801px;
+  height: 895px;
 }
 header .bg-right svg rect {
-    width: 435.431px;
-    height: 861px;
+  width: 435.431px;
+  height: 861px;
 }
-header .logo {
-    padding: 17px 0 0 20px;
+.head-top .logo {
+  padding: 17px 0 0 20px;
+}
+header .header-bottom {
+  max-width: 1164px;
+  margin: 0 auto;
 }
 header .flex {
-    display: flex;
-    justify-content: center;
-    gap: 65px;
-    padding-top: 110px;
+  display: flex;
+  justify-content: center;
+  gap: 65px;
+  padding-top: 110px;
 }
 header .flex .wrapper {
-    display: flex;
-    flex-direction: column;
-    text-align: left;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
 }
 header .flex .wrapper h1 {
-    font-size: 54px;
-    font-weight: 900;
-    padding: 59px 20px 32px;
-    line-height: 1.19;
+  font-size: 54px;
+  font-weight: 900;
+  padding: 59px 20px 32px;
+  line-height: 1.19;
 }
 header .flex .wrapper .desc {
-    padding: 0 20px 0;
-    line-height: 1.7;
-    color: #a1a2a4;
+  padding: 0 20px 0;
+  line-height: 1.7;
+  color: #a1a2a4;
+}
+header .flex .wrapper .chart-img {
+  min-width: 587px;
 }
 .wrapper .get-started {
-    width: 178px;
-    padding: 39px 20px;
+  width: 178px;
+  padding: 39px 20px;
 }
 
-@media screen and (max-width:1440px) {
-    header {
-        padding: 53px 145px 0;
-    }
-    header .bg-right {
-        left: 751px;
-    }
+/* HAMBURGER */
+header .hamburger span {
+  display: block;
+  position: absolute;
+  height: 4px;
+  width: 26px;
+  opacity: 1;
+  left: 0;
+  background: #81e3ff;
+  transition: 0.25s ease-in-out;
+}
+header .hamburger span:nth-child(1) {
+  top: 0px;
+  transform-origin: left center;
+}
+header .hamburger span:nth-child(2) {
+  top: 7px;
+  opacity: 1;
+  transform-origin: left center;
+}
+header .hamburger span:nth-child(3) {
+  top: 14px;
+  transform-origin: left center;
+}
+header .open span:nth-child(1) {
+  transform: rotate(45deg);
+  top: -3px;
+}
+header .open span:nth-child(2) {
+  top: 0;
+  opacity: 0;
+  transition: all 0.5 ease-in-out;
+}
+header .open span:nth-child(3) {
+  transform: rotate(-45deg);
+  top: 15px;
+}
+
+@media only screen and (max-width: 767px) {
+  .hide-on-mobile {
+	display: none;
+  }
+  .collapse:not(.show) {
+	display: none;
+  }
+  header .flex {
+	flex-wrap: wrap;
+  }
+}
+
+@media (min-width: 768px) {
+  .hide-on-pc {
+	display: none;
+  }
+}
+
+@media screen and (max-width: 1440px) {
+  header .bg-right {
+	left: 751px;
+  }
+}
+
+@media screen and (max-width:767px) {
+	h1,h2,h3,h5,h6 {
+		font-size: 24px !important;
+		text-align: center;
+	}
+	p {
+		font-size: 18px !important;
+		text-align: center;
+	}
+	header .flex .wrapper .chart-img {
+		min-width: 100%;
+	}
 }
